Fix styles and re-add server availability message (#334)
* Revert server availability code

Not ready for primetime

* Fix some global styles

* Add extra padding

* Re-add server availability code

* Fix some global styles

* Add extra padding

* Re-add server availability code

--- a/components/GridRepCollection/index.scss
+++ b/components/GridRepCollection/index.scss
@@ -3,6 +3,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   margin: 0 auto;
+  margin-top: $unit-2x;
   padding: 0;
   padding-top: $unit-fourth;
   transition: opacity 0.14s ease-in-out;
